experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/468/report-468/jadx/output.txt
Test.java:35: error: incompatible types: possible lossy conversion from int to short
                s = (int) (s + 82.33f);
                    ^
1 error
